# stick-to-it

./: README.md
stick_to_it/: Dockerfile  fly.toml  manage.py  pyproject.toml
stick_to_it/main_app/: admin.py  forms.py  models.py  urls.py  views.py
stick_to_it/main_app/migrations/: 0001_initial.py  0002_alter_card_complete_date_alter_card_due_date.py  0002_alter_card_options.py  0003_alter_card_options_alter_card_due_date.py  0003_card_user.py  0004_alter_card_complete_date_alter_card_due_date.py  0005_alter_card_due_date.py  0006_todo.py  0007_card_complete.py  0008_todo_complete.py  0009_rename_todo_todo_name.py  0010_remove_card_complete_remove_todo_complete.py
stick_to_it/main_app/static/css/: style.css
stick_to_it/main_app/templates/: about.html  base.html  home.html
stick_to_it/main_app/templates/cards/: archive.html  detail.html  index.html
stick_to_it/main_app/templates/main_app/: card_confirm_delete.html  card_form.html
stick_to_it/main_app/templates/registration/: login.html  signup.html
stick_to_it/stick_to_it/: asgi.py  settings.py  urls.py  wsgi.py
