[tool.poetry]
name = "stick-to-it"
version = "0.1.0"
description = ""
authors = ["Brad Smith <bradsmith@duck.com>"]
readme = "README.md"
[tool.poetry.dependencies]
python = "^3.11"

django = "^5.0"
dj-database-url = "^2.1.0"
daphne = "^4.0.0"
psycopg2-binary = "^2.9.9"
boto3 = "^1.34.5"
django-environ = "^0.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
